Separated out search img class to avoid too much stretching of the images inside the modus

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -175,12 +175,18 @@ a {
   object-fit: cover;
   width: 100%;
   height: 100%;
+  min-height: 150px;
   
   &:hover {
     box-shadow: 0 0 2px 1px $heading-color;
   }
 }
 
+
+.search-img {
+  @extend .feed-img;
+  min-height: 100px;
+}
 
 /* Card deck */
 
@@ -191,6 +197,7 @@ a {
   object-fit: cover;
   width: 100%;
   height: 100%;
+  min-height: 200px;
   
   &:hover {
     box-shadow: 0 0 2px 1px $heading-color;
